--- a/FlagpoleClient/platformio.ini
+++ b/FlagpoleClient/platformio.ini
@@ -17,3 +17,5 @@ lib_deps =
 	mikem/RadioHead@^1.113
 	adafruit/Adafruit FXOS8700@^2.2.0
 	adafruit/Adafruit FXAS21002C@^2.1.1
+	adafruit/Adafruit MPU6050@^2.0.6
+	claws/BH1750@^1.3.0
