--- a/FlagpoleServer/platformio.ini
+++ b/FlagpoleServer/platformio.ini
@@ -12,6 +12,4 @@
 platform = atmelsam
 board = adafruit_feather_m0
 framework = arduino
-lib_deps = 
-	adafruit/Adafruit BusIO@^1.9.3
-	mikem/RadioHead@^1.113
+lib_deps = mikem/RadioHead@^1.113
