json formatting prototype code

--- a/FlagpoleServer/platformio.ini
+++ b/FlagpoleServer/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelsam
 board = adafruit_feather_m0
 framework = arduino
-lib_deps = mikem/RadioHead@^1.113
+lib_deps = 
+	mikem/RadioHead@^1.113
+	bblanchon/ArduinoJson@^6.19.2
