--- a/FlagpoleClient/platformio.ini
+++ b/FlagpoleClient/platformio.ini
@@ -18,3 +18,4 @@ lib_deps =
 	adafruit/Adafruit MPU6050@^2.0.6
 	claws/BH1750@^1.3.0
 	bblanchon/ArduinoJson@^6.19.2
+	adafruit/Adafruit Unified Sensor@^1.1.4
