--- a/FlagpoleClient/platformio.ini
+++ b/FlagpoleClient/platformio.ini
@@ -19,3 +19,4 @@ lib_deps =
 	claws/BH1750@^1.3.0
 	bblanchon/ArduinoJson@^6.19.2
 	adafruit/Adafruit Unified Sensor@^1.1.4
+	adafruit/SD@0.0.0-alpha+sha.041f788250
