--- a/FlagpoleClient/platformio.ini
+++ b/FlagpoleClient/platformio.ini
@@ -20,3 +20,4 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.19.2
 	adafruit/Adafruit Unified Sensor@^1.1.4
 	adafruit/SdFat - Adafruit Fork@^1.5.1
+	adafruit/SD@0.0.0-alpha+sha.041f788250
